tests/sksl/errors/LayoutInFunctions.glsl
### Compilation failed:

error: 13: layout qualifier 'origin_upper_left' is not permitted here
error: 13: layout qualifier 'push_constant' is not permitted here
error: 13: layout qualifier 'blend_support_all_equations' is not permitted here
error: 13: layout qualifier 'srgb_unpremul' is not permitted here
error: 13: layout qualifier 'location' is not permitted here
error: 13: layout qualifier 'offset' is not permitted here
error: 13: layout qualifier 'binding' is not permitted here
error: 13: layout qualifier 'index' is not permitted here
error: 13: layout qualifier 'set' is not permitted here
error: 13: layout qualifier 'builtin' is not permitted here
error: 13: layout qualifier 'input_attachment_index' is not permitted here
error: 27: layout qualifier 'origin_upper_left' is not permitted here
error: 27: layout qualifier 'push_constant' is not permitted here
error: 27: layout qualifier 'blend_support_all_equations' is not permitted here
error: 27: layout qualifier 'srgb_unpremul' is not permitted here
error: 27: layout qualifier 'location' is not permitted here
error: 27: layout qualifier 'offset' is not permitted here
error: 27: layout qualifier 'binding' is not permitted here
error: 27: layout qualifier 'index' is not permitted here
error: 27: layout qualifier 'set' is not permitted here
error: 27: layout qualifier 'builtin' is not permitted here
error: 27: layout qualifier 'input_attachment_index' is not permitted here
22 errors
